# profile.mobile.apps.native.gallery

./: .cproject  .project  .sdk_delta.info  CMakeLists.txt  INSTALL  NOTICE  WORKSPACE  org.tizen.gallery-1.0.0-arm-debug.tpk  org.tizen.gallery-1.0.0-arm.tpk  org.tizen.gallery-1.0.0-arm_debug.tpk  org.tizen.gallery-1.0.0-i386-debug.tpk  org.tizen.gallery-1.0.0-i386.tpk  org.tizen.gallery-1.0.0-i386_debug.tpk  org.tizen.gallery.efl  org.tizen.gallery.manifest  org.tizen.gallery.xml  project_def.prop  tizen-manifest.xml
.sign/: .manifest.tmp  author-signature.xml  signature1.xml
inc/: gallery.h
inc/data/: gl-data-type.h  gl-data-util.h  gl-data.h  gl-local-data.h
inc/features/: gl-albums-sel.h  gl-albums.h  gl-entry.h  gl-main.h  gl-pinchzoom.h  gl-thumbs-edit.h  gl-thumbs-sel.h  gl-thumbs.h
inc/util/: gl-db-update.h  gl-debug.h  gl-exif.h  gl-ext-exec.h  gl-ext-ug-load.h  gl-file-util.h  gl-fs.h  gl-icons.h  gl-lang.h  gl-strings.h  gl-ta.h  gl-thread-util.h  gl-ui-util.h  gl-util.h
inc/widget/: gl-button.h  gl-controlbar.h  gl-ctxpopup.h  gl-editfield.h  gl-gesture.h  gl-nocontents.h  gl-notify.h  gl-popup.h  gl-progressbar.h  gl-rotate-bg.h  gl-thumb.h  gl-tile.h
packaging/: org.tizen.gallery.spec
res/: gallery.uri
res/black_theme/edc/: gl-gengrid-item-ctxpopup.edc  gl-naviframe.edc  gl-nocontents.edc  gl-popup-entry.edc  gl-selection-notification.edc  gl-timeline.edc
res/black_theme/images_edc/: gl-images.edc
res/edje/: gallery-edc-res.h  gallery.edc  gl-button.edc  gl-check.edc  gl-ctxpopup.edc  gl-entry.edc  gl-expanded-title.edc  gl-gengrid-item-albums.edc  gl-gengrid-item-thumbview.edc  gl-gengrid.edc  gl-label.edc  gl-macro.edc  gl-progressbar.edc  gl-timeline.edc
res/po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ro.po  (+11 more)
src/: gallery.c
src/2dview/: gl-albums-edit.c  gl-albums-edit.h  gl-albums-new.c  gl-albums-new.h  gl-albums-rename.c  gl-albums-rename.h  gl-ecore-animator.h  gl-exception.h  gl-timeline.c  gl-timeline.h
src/data/: gl-data-type.c  gl-data-util.c  gl-data.c  gl-local-data.c
src/features/: gl-albums-sel.c  gl-albums.c  gl-entry.c  gl-main.c  gl-pinchzoom.c  gl-thumbs-edit.c  gl-thumbs-sel.c  gl-thumbs.c
src/util/: gl-db-update.c  gl-debug.c  gl-exif.c  gl-ext-exec.c  gl-ext-ug-load.c  gl-file-util.c  gl-fs.c  gl-lang.c  gl-ta.c  gl-thread-util.c  gl-ui-util.c  gl-util.c
src/widget/: gl-button.c  gl-controlbar.c  gl-ctxpopup.c  gl-editfield.c  gl-gesture.c  gl-nocontents.c  gl-notify.c  gl-popup.c  gl-progressbar.c  gl-rotate-bg.c  gl-thumb.c  gl-tile.c
widget/: .cproject  .project  CMakeLists.txt  project_def.prop  tizen-manifest.xml
widget/inc/: gl_widget.h  gl_widget_debug.h
widget/include/: gl_widget.h
widget/res/: CMakeLists.txt  gallerywidget.edc
widget/src/: gl_widget_create.c  gl_widget_main.c
